First pass of weaving spike.